evidence/phase-2/txt/08-describe-route-tables.txt
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0ccf1f641a7240458",
                    "RouteTableId": "rtb-06e1e95380396736e",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-06e1e95380396736e",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0fed992b3b6f04e73",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0c1d93e8bb28522d3",
            "OwnerId": "151567229153"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-074e6e4c2eaf65826",
                    "RouteTableId": "rtb-0a58155eb618d2f4d",
                    "SubnetId": "subnet-0f6a095e909bde55b",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0910b4da26dbda192",
                    "RouteTableId": "rtb-0a58155eb618d2f4d",
                    "SubnetId": "subnet-0452c2f12e977d7a2",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0a58155eb618d2f4d",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.20.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-03e5d9f19b93dd913",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "SecurityTier",
                    "Value": "Foundation"
                },
                {
                    "Key": "Project",
                    "Value": "Sentinel-Foundation-AWS"
                },
                {
                    "Key": "BusinessUnit",
                    "Value": "Northbound"
                },
                {
                    "Key": "CostCenter",
                    "Value": "Platform"
                },
                {
                    "Key": "DataClassification",
                    "Value": "Internal"
                },
                {
                    "Key": "Name",
                    "Value": "nbf-sentinel-dev-rt-private"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                }
            ],
            "VpcId": "vpc-041a277d11b81fc73",
            "OwnerId": "151567229153"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0f1fe3697f6dcea22",
                    "RouteTableId": "rtb-037f571bba9ede05a",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-037f571bba9ede05a",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.10.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0fb2af4eafd34adb2",
            "OwnerId": "151567229153"
        },
        {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0adb28aca7787a1b9",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.10.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-0d6116b518cc006cd",
                    "Origin": "CreateRoute",
                    "State": "blackhole"
                }
            ],
            "Tags": [
                {
                    "Key": "Project",
                    "Value": "aegis-lz-aws"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                },
                {
                    "Key": "Name",
                    "Value": "aegis-lz-aws-dev-rt-private"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "Tier",
                    "Value": "private"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                }
            ],
            "VpcId": "vpc-0fb2af4eafd34adb2",
            "OwnerId": "151567229153"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0a51dd09b423d031d",
                    "RouteTableId": "rtb-0c3604106ce8bd373",
                    "SubnetId": "subnet-07cdc86f2ca890dfa",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-021323caec7455082",
                    "RouteTableId": "rtb-0c3604106ce8bd373",
                    "SubnetId": "subnet-01f4fb50d39b4e3ae",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0c3604106ce8bd373",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.20.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-0d8ea940fbb024980",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "CostCenter",
                    "Value": "ArchitectureLab"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                },
                {
                    "Key": "Name",
                    "Value": "novatel-net-dev-private-rt-useast1"
                },
                {
                    "Key": "DataClassification",
                    "Value": "Internal"
                },
                {
                    "Key": "Domain",
                    "Value": "net"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "Project",
                    "Value": "Telco-Sentinel-AWS"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                }
            ],
            "VpcId": "vpc-007bfb08f99ed1f9c",
            "OwnerId": "151567229153"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-09b79b90f8857d6ec",
                    "RouteTableId": "rtb-06f0d405016b13b81",
                    "SubnetId": "subnet-0b0958b45074309d1",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-05852a68dc9ee83b2",
                    "RouteTableId": "rtb-06f0d405016b13b81",
                    "SubnetId": "subnet-02fe44697a8fa2e57",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-06f0d405016b13b81",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.20.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0328a474805998c23",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "BusinessUnit",
                    "Value": "Northbound"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                },
                {
                    "Key": "CostCenter",
                    "Value": "Platform"
                },
                {
                    "Key": "Project",
                    "Value": "Sentinel-Foundation-AWS"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                },
                {
                    "Key": "DataClassification",
                    "Value": "Internal"
                },
                {
                    "Key": "Name",
                    "Value": "nbf-sentinel-dev-rt-public"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "SecurityTier",
                    "Value": "Foundation"
                }
            ],
            "VpcId": "vpc-041a277d11b81fc73",
            "OwnerId": "151567229153"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-00d9cc165b985c95a",
                    "RouteTableId": "rtb-016d956397c9fc3c8",
                    "SubnetId": "subnet-0d3dbb11422d40d91",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-016d956397c9fc3c8",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.10.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0dd577b2db1f131ac",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                },
                {
                    "Key": "Tier",
                    "Value": "public"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                },
                {
                    "Key": "Name",
                    "Value": "aegis-lz-aws-dev-rt-public"
                },
                {
                    "Key": "Project",
                    "Value": "aegis-lz-aws"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                }
            ],
            "VpcId": "vpc-0fb2af4eafd34adb2",
            "OwnerId": "151567229153"
        },
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-050ce7f6166e294c3",
                    "RouteTableId": "rtb-02704e8e4521e3a40",
                    "SubnetId": "subnet-07eae3b110391db68",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-003c9dd1f365c6c19",
                    "RouteTableId": "rtb-02704e8e4521e3a40",
                    "SubnetId": "subnet-01b38163a2e8bfb15",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-02704e8e4521e3a40",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.20.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-07f4ccee12d2242da",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "Project",
                    "Value": "Telco-Sentinel-AWS"
                },
                {
                    "Key": "DataClassification",
                    "Value": "Internal"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                },
                {
                    "Key": "CostCenter",
                    "Value": "ArchitectureLab"
                },
                {
                    "Key": "Domain",
                    "Value": "net"
                },
                {
                    "Key": "Name",
                    "Value": "novatel-net-dev-public-rt-useast1"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                }
            ],
            "VpcId": "vpc-007bfb08f99ed1f9c",
            "OwnerId": "151567229153"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0e0ca9804d9023ec7",
                    "RouteTableId": "rtb-0221beaabfa02bfed",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0221beaabfa02bfed",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.20.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-007bfb08f99ed1f9c",
            "OwnerId": "151567229153"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0be907bc5cdabcb09",
                    "RouteTableId": "rtb-0f67dc0b8c33812d5",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-0f67dc0b8c33812d5",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.20.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-041a277d11b81fc73",
            "OwnerId": "151567229153"
        }
    ]
}
