evidence/phase-2/txt/11-describe-security-groups.txt
{
    "SecurityGroups": [
        {
            "GroupId": "sg-09fde64609fd14b9d",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all outbound traffic",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "SecurityTier",
                    "Value": "Foundation"
                },
                {
                    "Key": "Project",
                    "Value": "Sentinel-Foundation-AWS"
                },
                {
                    "Key": "BusinessUnit",
                    "Value": "Northbound"
                },
                {
                    "Key": "Name",
                    "Value": "nbf-sentinel-dev-sg-bastion"
                },
                {
                    "Key": "CostCenter",
                    "Value": "Platform"
                },
                {
                    "Key": "DataClassification",
                    "Value": "Internal"
                },
                {
                    "Key": "Role",
                    "Value": "bastion"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                }
            ],
            "VpcId": "vpc-041a277d11b81fc73",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-09fde64609fd14b9d",
            "OwnerId": "151567229153",
            "GroupName": "nbf-sentinel-dev-sg-bastion",
            "Description": "Bastion security group with SSH access restricted to trusted admin IP",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "SSH from trusted admin IP",
                            "CidrIp": "189.154.233.138/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-01642c510135a5c48",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all outbound traffic",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "nbf-sentinel-dev-sg-private-workload"
                },
                {
                    "Key": "Project",
                    "Value": "Sentinel-Foundation-AWS"
                },
                {
                    "Key": "SecurityTier",
                    "Value": "Foundation"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                },
                {
                    "Key": "BusinessUnit",
                    "Value": "Northbound"
                },
                {
                    "Key": "CostCenter",
                    "Value": "Platform"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                },
                {
                    "Key": "DataClassification",
                    "Value": "Internal"
                },
                {
                    "Key": "Role",
                    "Value": "private-workload"
                }
            ],
            "VpcId": "vpc-041a277d11b81fc73",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-01642c510135a5c48",
            "OwnerId": "151567229153",
            "GroupName": "nbf-sentinel-dev-sg-private-workload",
            "Description": "Private workload SG allowing SSH only from bastion SG",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [
                        {
                            "Description": "SSH from bastion security group",
                            "UserId": "151567229153",
                            "GroupId": "sg-09fde64609fd14b9d"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-031b09c6f3f407f0e",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-041a277d11b81fc73",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-031b09c6f3f407f0e",
            "OwnerId": "151567229153",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "151567229153",
                            "GroupId": "sg-031b09c6f3f407f0e"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-04c3d7edac85b6d85",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all outbound",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "novatel-net-dev-public-sg-useast1"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                },
                {
                    "Key": "Domain",
                    "Value": "net"
                },
                {
                    "Key": "CostCenter",
                    "Value": "ArchitectureLab"
                },
                {
                    "Key": "Project",
                    "Value": "Telco-Sentinel-AWS"
                },
                {
                    "Key": "DataClassification",
                    "Value": "Internal"
                }
            ],
            "VpcId": "vpc-007bfb08f99ed1f9c",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-04c3d7edac85b6d85",
            "OwnerId": "151567229153",
            "GroupName": "novatel-net-dev-public-sg",
            "Description": "Baseline public security group",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow HTTP from internet",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow HTTPS from internet",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0ec9f8de8490b7e7a",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0fb2af4eafd34adb2",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-0ec9f8de8490b7e7a",
            "OwnerId": "151567229153",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "151567229153",
                            "GroupId": "sg-0ec9f8de8490b7e7a"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0e11758e6854ebdaa",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-007bfb08f99ed1f9c",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-0e11758e6854ebdaa",
            "OwnerId": "151567229153",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "151567229153",
                            "GroupId": "sg-0e11758e6854ebdaa"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-01c66616b8334a2cb",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0c1d93e8bb28522d3",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-01c66616b8334a2cb",
            "OwnerId": "151567229153",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "151567229153",
                            "GroupId": "sg-01c66616b8334a2cb"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0624b3ee55ed82e62",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all outbound",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                },
                {
                    "Key": "Domain",
                    "Value": "net"
                },
                {
                    "Key": "Name",
                    "Value": "novatel-net-dev-private-sg-useast1"
                },
                {
                    "Key": "CostCenter",
                    "Value": "ArchitectureLab"
                },
                {
                    "Key": "Project",
                    "Value": "Telco-Sentinel-AWS"
                },
                {
                    "Key": "DataClassification",
                    "Value": "Internal"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                }
            ],
            "VpcId": "vpc-007bfb08f99ed1f9c",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-0624b3ee55ed82e62",
            "OwnerId": "151567229153",
            "GroupName": "novatel-net-dev-private-sg",
            "Description": "Baseline private security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow internal VPC traffic",
                            "CidrIp": "10.20.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Allow HTTPS from public SG",
                            "UserId": "151567229153",
                            "GroupId": "sg-04c3d7edac85b6d85"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0907b41426ca12997",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all outbound traffic",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Tier",
                    "Value": "security"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                },
                {
                    "Key": "Name",
                    "Value": "aegis-lz-aws-dev-sg-public-bastion"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "Project",
                    "Value": "aegis-lz-aws"
                }
            ],
            "VpcId": "vpc-0fb2af4eafd34adb2",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-0907b41426ca12997",
            "OwnerId": "151567229153",
            "GroupName": "aegis-lz-aws-dev-sg-public-bastion",
            "Description": "Security group for public bastion access",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "SSH from admin IP",
                            "CidrIp": "189.154.233.138/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0b48baab330694f71",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all outbound traffic",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "aegis-lz-aws-dev-sg-private-app"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "Project",
                    "Value": "aegis-lz-aws"
                },
                {
                    "Key": "Tier",
                    "Value": "security"
                }
            ],
            "VpcId": "vpc-0fb2af4eafd34adb2",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-0b48baab330694f71",
            "OwnerId": "151567229153",
            "GroupName": "aegis-lz-aws-dev-sg-private-app",
            "Description": "Security group for private application tier",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [
                        {
                            "Description": "HTTP from bastion security group",
                            "UserId": "151567229153",
                            "GroupId": "sg-0907b41426ca12997"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-05894e0a7b7293052",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all outbound traffic",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Role",
                    "Value": "web"
                },
                {
                    "Key": "SecurityTier",
                    "Value": "Foundation"
                },
                {
                    "Key": "Project",
                    "Value": "Sentinel-Foundation-AWS"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                },
                {
                    "Key": "DataClassification",
                    "Value": "Internal"
                },
                {
                    "Key": "CostCenter",
                    "Value": "Platform"
                },
                {
                    "Key": "Name",
                    "Value": "nbf-sentinel-dev-sg-web"
                },
                {
                    "Key": "BusinessUnit",
                    "Value": "Northbound"
                },
                {
                    "Key": "Owner",
                    "Value": "Fernando"
                }
            ],
            "VpcId": "vpc-041a277d11b81fc73",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:151567229153:security-group/sg-05894e0a7b7293052",
            "OwnerId": "151567229153",
            "GroupName": "nbf-sentinel-dev-sg-web",
            "Description": "Example web tier SG allowing HTTP and HTTPS",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "HTTP from internet",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "HTTPS from internet",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
